# mnlscript.py

./: .flake8  .gitignore  README.md  mypy.ini  pyproject.toml
.github/workflows/: check.yml
mnlscript/: __init__.py  commands.py  consts.py  globals.py  misc.py  subroutine.py  text.py  utils.py  variables.py
mnlscript/tools/: compiler.py  consts.py  decompiler.py
mnlscript/tools/decompiler/: __init__.py  __main__.py  command_matchers.py  decompiler.py  globals.py  misc.py
typings/dynamicscope/: __init__.pyi
