[tool.poetry]
name = "mnlscript"
version = "0.1.0"
description = "Compiler and decompiler for the Mario & Luigi scripting language from and to Python."
authors = ["Dimitar Dimitrov <dmtrdmtrov@gmail.com>"]
license = "LGPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mnllib = {git = "https://github.com/MnL-Modding/mnllib.py.git", branch = "v1"}
dynamicscope = "^1.0.4"
more-itertools = "^10.5.0"

[tool.poetry.group.dev.dependencies]
flake8-pytest-style = "^2.0.0"
flake8 = "^7.1.1"
pytest = "^8.3.3"
mypy = "^1.13.0"

[tool.poetry.scripts]
mnlscript-compile = "mnlscript.tools.compiler:main"
mnlscript-decompile = "mnlscript.tools.decompiler:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
